--- a/rabbit-api-work/foodie-mq-core-producer/pom.xml
+++ b/rabbit-api-work/foodie-mq-core-producer/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>foodie-mq-task</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
